# LinkedInApplyAutomation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SETUP.md
examples/: config.prod.yaml.example  config.yaml.example  sample_docx_resume.docx  sample_text_resume.txt
src/: main.py
src/ai/: .placeholder  __init__.py  ai_response_generator.py
src/bot/: .placeholder  __init__.py  linkedin_easy_apply.py
src/utils/: .placeholder  __init__.py  file_utils.py  utils.py
tests/: test_ai_response_generator.py
