[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-easy-apply-bot"
version = "1.0.0"
description = "A bot for automating LinkedIn Easy Apply job applications"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "pratikjadhav2726", email = "pratikjadhav2726@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "selenium",
    "pyautogui",
    "webdriver_manager",
    "PyYAML",
    "validate_email",
    "openai>=1.0.0",
    "pypdf>=3.0.0",
    "ollama",
    "docx2pdf",
    "docx",
    "litellm",
    "PyPDF2",
    "python-dotenv",
    "requests",
    "sentence-transformers",
    "faiss-cpu",
    "numpy",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/pratikjadhav2726/LinkedInEasyApplyBot"
Repository = "https://github.com/pratikjadhav2726/LinkedInEasyApplyBot"
Issues = "https://github.com/pratikjadhav2726/LinkedInEasyApplyBot/issues"

[project.scripts]
linkedin-bot = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "pyautogui.*",
    "webdriver_manager.*",
    "validate_email.*",
    "ollama.*",
    "docx2pdf.*",
    "docx.*",
    "litellm.*",
    "pypdf.*",
]
ignore_missing_imports = true
